force-app/main/default/objects/Product2/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <label>GST Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>e.g. 18.00 for the 18% slab. Per-product because GST rate varies by HSN code, not a single store-wide constant. See Feature Expansion Plan §3.</description>
</CustomField>