force-app/main/default/objects/Product2/fields/HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>HSN_Code__c</fullName>
    <label>HSN Code</label>
    <length>10</length>
    <type>Text</type>
    <description>Optional — needed for a fully compliant GST invoice line item.</description>
</CustomField>