force-app/main/default/objects/Product2/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>The real, editable source of truth for this product's price — read directly by ProductCatalogController (storefront display) and CheckoutController (server-side re-pricing at checkout). Synced once from the Standard Price Book's PricebookEntry.UnitPrice; PricebookEntry itself is still required by the platform (OpportunityLineItem/OrderItem both mandate a PricebookEntryId), but its UnitPrice value no longer drives what's actually charged — edit Price__c instead.</description>
</CustomField>