force-app/main/default/objects/Product2/fields/Primary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor__c</fullName>
    <label>Primary Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who to reorder this product from — a single-vendor model, matching LaptopKart's catalog where each product has one main supplier. If a product genuinely needs more than one vendor at different costs, replace this with a Vendor_Product__c junction object instead (see the Inventory & Vendor System design).</description>
</CustomField>