force-app/main/default/objects/Product2/fields/Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level__c</fullName>
    <label>Reorder Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>The Stock_Quantity__c threshold at or below which this product is considered low on stock — ProductCatalogController's "Low Stock" badge uses this per-product when set, falling back to a store-wide default otherwise. Also the threshold a future low-stock report/batch would compare against.</description>
</CustomField>