force-app/main/default/objects/Product2/fields/Reorder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Quantity__c</fullName>
    <label>Reorder Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>How many units to reorder from Primary_Vendor__c when restocking this product. Only meaningful once a Purchase Order workflow exists (a later phase) — kept on Product2 now so restock planning has somewhere to live without waiting on that workflow.</description>
</CustomField>