force-app/main/default/objects/Product2/fields/SKU_At_Vendor__c.field-meta.xml
<CustomField>
    <fullName>SKU_At_Vendor__c</fullName>
    <label>Vendor SKU</label>
    <length>60</length>
    <type>Text</type>
    <description>This product's own product code at Primary_Vendor__c, if different from LaptopKart's ProductCode.</description>
</CustomField>