force-app/main/default/objects/Product2/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quantity__c</fullName>
    <label>Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Units currently available to sell. Blank means stock isn't tracked for this product yet — checkout treats a blank value as unlimited/always available rather than blocking the sale, the same graceful-fallback approach already used for Price__c/GST_Rate__c. Once set, CheckoutController enforces it with a row lock (SELECT ... FOR UPDATE) so two concurrent checkouts for the last unit can never both succeed, decrements it on a successful order, and OrderTrackingService restores it when an order is Cancelled or Returned.</description>
</CustomField>